Integracion con diseño, cambios principales

--- a/templates/web/pormibarrio/around/tabbed_lists.html
+++ b/templates/web/pormibarrio/around/tabbed_lists.html
@@ -23,6 +23,7 @@
     <!--/end intro reports-->
     <div class="rl scrolled">
     <!--REPORTS LIST-->
+        [% INCLUDE "around/on_map_list_items.html" %]
     	[% INCLUDE "around/around_map_list_items.html" %]
     </div>
     <!--/end reports list-->
