--- a/templates/web/pormibarrio/footer.html
+++ b/templates/web/pormibarrio/footer.html
@@ -32,4 +32,5 @@
 
 <!-- [% INCLUDE 'debug_footer.html' %] -->
 </body>
+    <script type="text/javascript" src="[% version('/js/pormibarrio-main.js') %]"></script>
 </html>
