--- a/templates/web/pormibarrio/report/_main.html
+++ b/templates/web/pormibarrio/report/_main.html
@@ -40,3 +40,6 @@
 		<span class="sign"><!--[% problem.meta_line(c) | html %]--></span>
 	</div>
 </div>
+<div class="status-report">
+    <h4>Estado del reporte</h4>
+</div>
