Fixed problem list

--- a/templates/web/pormibarrio/around/tabbed_lists.html
+++ b/templates/web/pormibarrio/around/tabbed_lists.html
@@ -21,7 +21,11 @@
         Duis varius justo purus, et lobortis turpis sagittis sed.</p>
     </div>
     <!--/end intro reports-->
-    <div class="rl scrolled">
+    <!-- 
+		<div class="rl scrolled" id="current">
+		</div>
+    -->
+    <div class="rl scrolled" id="current_near">
     <!--REPORTS LIST-->
     	[% INCLUDE "around/around_map_list_items.html" %]
     </div>
