Fixed problem list update on map drag

--- a/templates/web/pormibarrio/around/tabbed_lists.html
+++ b/templates/web/pormibarrio/around/tabbed_lists.html
@@ -21,11 +21,15 @@
         Duis varius justo purus, et lobortis turpis sagittis sed.</p>
     </div>
     <!--/end intro reports-->
-    <div class="rl scrolled">
+    <div class="rl scrolled" id="current">
     <!--REPORTS LIST-->
         [% INCLUDE "around/on_map_list_items.html" %]
     	[% INCLUDE "around/around_map_list_items.html" %]
     </div>
+    <!--
+    <div class="rl scrolled" id="current_near">
+    </div>
+    -->
     <!--/end reports list-->
 </div>
 <!--end listado de reportes-->
