--- a/templates/web/pormibarrio/report/_item.html
+++ b/templates/web/pormibarrio/report/_item.html
@@ -1,5 +1,5 @@
 <div class="it-r">
-	<div class="r-icon r-arbolado"></div>
+	<div class="r-icon r-category-group-[% problem.category_group(c) %]"></div>
 	<div class="it-r-info">
 		<a class="text" href="[% c.uri_for('/report', problem.id ) %]">
 			[% IF problem.photo;
