--- a/templates/web/pormibarrio/report/new/category_groups.html
+++ b/templates/web/pormibarrio/report/new/category_groups.html
@@ -7,10 +7,8 @@
 	[% END %]
 </script>
 
-[% puto %]
-
 <label for='form_category_groups' id='form_category_label_groups'>[% loc('Category group') %]</label>
-<select name='category_groups' id='form_category_groups' onchange='form_category_group_onchange()'>
+<select name='category_groups' id='form_category_groups' onchange='form_category_group_onchange()'  class="required" required>
 	[% FOREACH group IN category_groups_seen %]
 		[% group_name = group.1 %]
 		[% group_name_lc = group_name | lower %]
@@ -22,7 +20,7 @@
 	category = category | lower;
    END; %]
 <label for='form_category' id="form_category_label">[% loc('Category') %]</label>
-<select name='category' id='form_category' [% ' disabled' IF not category %]>
+<select name='category' id='form_category' [% ' disabled' IF not category %]  class="required" required>
 	[% FOREACH cat_op IN category_currently_loaded %]
 		[% cat_op_lc = cat_op | lower %]
 		<option value='[% cat_op | html %]' [% ' selected' IF report.category == cat_op || category == cat_op_lc %]>[% IF loop.first %][% cat_op %][% ELSE %][% cat_op | html %][% END %]</option>
