--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -191,7 +191,7 @@
 					</div>
 				[% ELSE %]
 					<div class="bloque-sesion">
-						<div class="ir">
+						<div class="ir" id="report-new-login">
 							<h2>Accede a tu cuenta</h2>
 							<p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
 						</div>
@@ -200,7 +200,7 @@
 						[% IF field_errors.email %]
 							<p class='form-error'>[% field_errors.email %]</p>
 						[% END %]
-						<input type="email" class="form-control" value="[% report.user.email | html %]" name="form_email" id="form_email" placeholder="[% loc('Please enter your email address') %]">
+						<input type="email" class="form-control required" value="[% report.user.email | html %]" name="form_email" id="form_email" placeholder="[% loc('Please enter your email address') %]" required>
 
 						<div id="form_sign_in">
 							<div class="ir">
@@ -317,4 +317,11 @@ $('div.scrolled-reportar').slimScroll({
     borderRadius:4,
     opacity: 1
 });
+
+[% IF scroll_to %]
+	$().ready(function() { $('div.scrolled-reportar').slimScroll({ scrollTo: $('[% scroll_to %]').offset().top }); });
+[% END %] 
+
+
 </script>
+
