--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -131,7 +131,7 @@
                                 <p class='form-error'>[% field_errors.photo %]</p>
                             [% END %]
                             <input type="file" name="photo" id="form_photo">
-                            
+
                             <p class="help-block">* El archivo no puede pesar más de 2MB (JPG, PNG, GIF) </p>
                         [% END %]
 
@@ -145,17 +145,17 @@
                     </div>
                 </form>
             </div>
-            
-            <div class="login">  
+
+            <div class="login">
 				[% IF c.user_exists %]
 					<div class="form-box">
 						<label for="form_email">[% loc('Your email') %]</label>
 						<input disabled type="text" value="[% c.user.email | html %]">
-					   
+
 						[% IF field_errors.general %]
 							<p class='form-error'>[% field_errors.general %]</p>
 						[% END %]
-					   
+
 						<label for="form_identity_document">[% loc('Identity document') %]</label>
 						[% IF field_errors.identity_document %]
 							<p class='form-error'>[% field_errors.identity_document %]</p>
@@ -184,7 +184,7 @@
 
 						<label for="form_phone">[% loc('Phone number (optional)') %]</label>
 						<input class="" type="text" value="[% report.user.phone | html %]" name="phone" id="form_phone" placeholder="[% loc('Your phone number') %]">
-				
+
 						<div class="form-txt-submit-box">
 							<input class="green-btn" type="submit" id="submit_register" name="submit_register" value="[% loc('Submit') %]">
 						</div>
@@ -195,7 +195,7 @@
 							<h2>Accede a tu cuenta</h2>
 							<p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
 						</div>
-						
+
 						<!--<label for="form_email">[% loc('Your email') %]</label>-->
 						[% IF field_errors.email %]
 							<p class='form-error'>[% field_errors.email %]</p>
@@ -205,12 +205,28 @@
 						<div id="form_sign_in">
 							<div class="ir">
 								<p>[% loc("Now to submit your report&hellip;") %]</p>
-								<p>[% loc("Do you have a FixMyStreet password?") %]</p>
+								<p>[% loc("Do you have a social network account?") %]</p>
 							</div>
-			
-							<div id="form_sign_in_yes" class="form-box">
+
+							[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
+							<div id="form_sign_social" class="form-box no-account">			
 								<div class="ir">
-									<h2>[% loc('<strong>Yes</strong> I have a password') %]</h2>
+									<h2>[% loc('<strong>Yes</strong> I have a social network account') %]</h2>
+								</div>
+								<div>
+									[% IF c.config.FACEBOOK_APP_ID %]
+									<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>
+									[% END %]
+									[% IF c.config.TWITTER_KEY %]
+									<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
+									[% END %]
+								</div>
+							</div>
+							[% END %]
+
+							<div id="form_sign_in_yes" class="form-box no-account">
+								<div class="ir">
+									<h2>[% loc('<strong>No</strong> I have a FixMyStreet password') %]</h2>
 								</div>
 
 								<label class="hidden-js n" for="password_sign_in">[% loc('Yes I have a password') %]</label>
@@ -221,12 +237,12 @@
 									<input type="password" name="password_sign_in" id="password_sign_in" placeholder="[% loc('Your password') %]" value="">
 									<input class="green-btn" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
 								</div>
-								
+
 								<div class="checkbox-group">
 									<input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
 									<label class="n inline" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
 								</div>
-				
+
 								<!--<div class="general-sidebar-notes" id="forgotten-pw">
 									<p class="dark">[% loc('Forgotten your password?') %]</p>
 									<p>[% loc('Confirm by email below, providing a new password at that point. When you confirm, your password will be updated.') %]</p>
@@ -236,7 +252,7 @@
 
 							<div id="form_sign_in_no" class="form-box no-account">
 								<div class="ir">
-									<h2>[% loc('<strong>No</strong> Let me confirm my report by email') %]</h2>
+									<h2>[% loc('<strong>Or</strong> Let me confirm my report by email') %]</h2>
 								</div>
 
 								[% INCLUDE 'report/new/extra_name.html' %]
@@ -268,7 +284,7 @@
 								<div class="form-group">
 									<label class="form-focus-hidden" for="form_phone">[% loc('Phone number (optional)') %]</label>
 									<input class="form-focus-hidden" type="text" value="[% report.user.phone | html %]" name="phone" id="form_phone" placeholder="[% loc('Your phone number') %]">
-							
+
 									<label class="form-focus-hidden" for="password_register">[% loc('Password (optional)') %]</label>
 
 									<div class="form-txt-submit-box form-focus-hidden">
@@ -276,23 +292,6 @@
 										<input class="green-btn" type="submit" id="submit_register" name="submit_register" value="[% loc('Submit') %]">
 									</div>
 								</div>
-							</div>
-
-							
-							[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
-							<div id="form_sign_social" class="form-box no-account">			
-								<div class="ir">
-									<h2>[% loc('<strong>Or</strong> Use a social network account') %]</h2>
-								</div>
-								<div>
-									[% IF c.config.FACEBOOK_APP_ID %]
-									<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>
-									[% END %]
-									[% IF c.config.TWITTER_KEY %]
-									<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
-									[% END %]
-							</div>
-							[% END %]
 							</div>
 						</div>
 					</div> <!-- bloque-sesion -->
@@ -320,7 +319,7 @@ $('div.scrolled-reportar').slimScroll({
 
 [% IF scroll_to %]
 	$().ready(function() { $('div.scrolled-reportar').slimScroll({ scrollTo: $('[% scroll_to %]').offset().top }); });
-[% END %] 
+[% END %]
 
 
 </script>
