--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -261,7 +261,7 @@
 								<div class="form-group">
 									<label for="form_name">[% loc('Name') %]</label>
 									[% IF field_errors.name %]
-										<p class='form-error'>[% field_errors.name %]</p>
+										<p class='form-error'>[% field_errors.name %] *</p>
 									[% END %]
 									<input type="text" class="form-focus-trigger validName" value="[% report.name | html %]" name="name" id="form_name" placeholder="[% loc('Your name') %]">
 								</div>
@@ -271,11 +271,11 @@
 									<label class="inline" for="form_may_show_name">[% loc('Show my name publicly') %]</label>
 								</div>
 								<div class="form-group">
-									<label for="form_identity_document">[% loc('Identity document') %]</label>
+									<label for="form_identity_document">[% loc('Identity document') %] *</label>
 									[% IF field_errors.identity_document %]
 										<p class='form-error'>[% field_errors.identity_document %]</p>
 									[% END %]
-									<input type="text" class="form-focus-trigger" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" placeholder="[% loc('Your identity document') %]">
+									<input type="text" class="form-focus-trigger" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" placeholder="[% loc('For example: 1.234.567-8') %]">
 								</div>
 								<!--<div class="general-sidebar-notes form-focus-hidden">
 									<p class="dark">[% loc('We never show your email address or phone number.') %]</p>
