--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -259,7 +259,7 @@
 								[% INCLUDE 'report/new/extra_name.html' %]
 
 								<div class="form-group">
-									<label for="form_name">[% loc('Name') %]</label>
+									<label for="form_name">[% loc('Name') %] *</label>
 									[% IF field_errors.name %]
 										<p class='form-error'>[% field_errors.name %] *</p>
 									[% END %]
