--- a/templates/web/pormibarrio/auth/social_signup.html
+++ b/templates/web/pormibarrio/auth/social_signup.html
@@ -10,23 +10,23 @@
         <input type="hidden" name="twitter_id" value="[% user.twitter_id | html %]">
         <div id="form_sign_in">
 			<div class="form-box">
-				<label for="name">[% loc('Name') %]</label>
+				<label for="name">[% loc('Name') %] *</label>
 				[% IF field_errors.name  %]
 					<div class="form-error">[% field_errors.name %]</div>
 				[% END %]
 				<input type="text" name="name" value="[% user.name | html %]" placeholder="[% loc('Your name') %]" required>
 				
-				<label class="n" for="email">[% loc('Email') %]</label>
+				<label class="n" for="email">[% loc('Email') %] *</label>
 				[% IF field_errors.email  %]
 					<div class="form-error">[% field_errors.email %]</div>
 				[% END %]
 				<input type="email" class="required email" id="email" name="email" value="[% user.email | html %]" placeholder="[% loc('Your email address') %]" required>
 
-				<label for="identity_document">[% loc('Identity document') %]</label>
+				<label for="identity_document">[% loc('Identity document') %] *</label>
 				[% IF field_errors.identity_document  %]
 					<div class="form-error">[% field_errors.identity_document %]</div>
 				[% END %]
-				<input type="text" name="identity_document" value="[% user.identity_document | html %]" placeholder="[% loc('Your identity document') %]">
+				<input type="text" name="identity_document" value="[% user.identity_document | html %]" placeholder="[% loc('For example: 1.234.567-8') %]">
 				
 				<div class="form-txt-submit-box">
 					<input class="green-btn" type="submit" name="sign_in" value="[% loc('Sign in') %]">
